--- a/faq.html
+++ b/faq.html
@@ -446,32 +446,12 @@
             </p>
             <p class="a-goldsainte-is">
               <span class="or-through-the-goldsainte-app">
-                i. Goldsainte offers a Worry-Free Cancellation to members who
-                book directly on
-              </span>
-              <a
-                class="goldsaintecom"
-                href="http://goldsainte.com/"
-                target="_blank"
-              >
-                <span class="or-through-the-goldsainte-app">
-                  <span class="goldsaintecom2">goldsainte.com</span>
-                </span>
-              </a>
-              <span class="or-through-the-goldsainte-app">
-                or through the Goldsainte app. A Worry-Free Cancellation means
-                that after you’ve purchased a ride, you have up to 24-hours
-                after booking to cancel it for any reason and receive a full
-                refund with no associated fees.
+                i. Goldsainte offers a Worry-Free Cancellation to members who book directly on goldsainte.com or through the Goldsainte app. A Worry-Free Cancellation means that after you’ve purchased a ride, you have up to 24-hours after booking to cancel it for any reason and receive a full refund with no associated fees.
               </span>
             </p>
             <p class="a-goldsainte-is">
               <span class="or-through-the-goldsainte-app">
-                ii. If a member cancels a booking following the 24-hour
-                Worry-Free Cancellation period, then Goldsainte will issue the
-                member a credit to their account. The booking must be completed
-                within one month of the original booking date, subject to any
-                applicable waivers that may extend this expiration date.
+                ii. If a member cancels a booking following the 24-hour Worry-Free Cancellation period, then Goldsainte will issue the member a credit to their account. The booking must be completed within one month of the original booking date, subject to any applicable waivers that may extend this expiration date.
               </span>
             </p>
             <p class="a-goldsainte-is">
