--- a/faq.html
+++ b/faq.html
@@ -455,7 +455,7 @@
               </span>
             </p>
             <p class="a-goldsainte-is">
-              <span class="or-through-the-goldsainte-app">
+              <span class="cycle-you-can">
                 iii. Non-members who book directly on
               </span>
               <a
@@ -463,11 +463,11 @@
                 href="http://goldsainte.com/"
                 target="_blank"
               >
-                <span class="or-through-the-goldsainte-app">
+                <span class="cycle-you-can">
                   <span class="goldsaintecom2">goldsainte.com</span>
                 </span>
               </a>
-              <span class="or-through-the-goldsainte-app">
+              <span class="cycle-you-can">
                 or through the Goldsainte app will be extended the same 24-hour
                 Worry-Free Cancellation period, however if a non-member booking
                 is cancelled after the 24-hour period, Goldsainte will be unable
@@ -475,7 +475,7 @@
               </span>
             </p>
             <p class="a-goldsainte-is">
-              <span class="or-through-the-goldsainte-app">&nbsp; </span>
+              <span class="cycle-you-can">&nbsp; </span>
             </p>
             <p class="a-goldsainte-is">
               <span class="how-does-goldsainte1"
